Drop List.of which is JDK9+ for Travis